syntax = "proto3";

package io.audiocloud.security.v1;

import "google/protobuf/timestamp.proto";

message UserInfo {
  string id = 1;
  optional string email = 2;
  repeated GlobalPermission permissions = 3;
  optional google.protobuf.Timestamp disabled_at = 4;
}

enum GlobalPermission {
  CreateTask = 0;
  DeleteTask = 1;
  InstanceInputOutput = 2;
  InstancePower = 3;
  InstanceMedia = 4;
}

enum TaskPermission {
  ReadTask = 0;
  SetTaskGraph = 1;
  StreamTaskSinks = 2;
  StreamTaskInputs = 3;
  SetTaskParameters = 4;
  SetTaskPlayPosition = 5;
}

message AppInfo {
  string id = 1;
  repeated GlobalPermission permissions = 2;
  optional google.protobuf.Timestamp disabled_at = 3;
}

message ApiKeyInfo {
  string key_id = 1;

  oneof principal {
    string user_id = 10;
    string app_id = 11;
  }

  optional string task_id = 20;
  repeated GlobalPermission global_permissions = 21;
  repeated TaskPermission task_permissions = 22;

  optional google.protobuf.Timestamp invalidated_at = 30;
}

message AuthorizationTokenInfo {
  string token_id = 1;
  repeated GlobalPermission permissions = 2;

  oneof principal {
    string user_id = 10;
    string app_id = 11;
  }

  google.protobuf.Timestamp expires_at = 20;
}